Update to get functions including sortables and datepicker

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -142,8 +142,10 @@ input {
 }
 
 .ui-dialog .ui-dialog-titlebar-close {
-  display: none;
+  display: ;
 }
+
+
 
 .ui-dialog input {
   min-height: 24px;
